--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 	</head>
 	<body>
 		<div class="top">
-			<h1 class="header">Mapping Crime in<br/> Los Angeles</h1>
+			<h1 class="header">Mapping LA<br/> Crime</h1>
 			<h1 class="header-small">LA Crime</h1>
 			<h2 class="subheader">
 				(<span id="years">2010-2016</span>)
@@ -207,7 +207,7 @@
 					<div class="inside-clock">
 						<p id="time">1:00-2:00AM</p>
 						<p id="time-content"><span id="time-percent">12%</span><br/><span
-						id="time-num">4,000</span></p>
+						id="time-num">4,000</span><br/></p>
 					</div>
 				</div>
 				<div class="box">
@@ -252,7 +252,36 @@
 
 				</div>
 			</div>
-			<div class="sec">
+			<div class="sec bs">
+				<h2 class="section-header" id="what-month" ><span>What time of the year</span> is crime occurring?</h2>
+				<div class="month-container">
+					<p class="m-caption">Jan</p>
+					<p class="m-caption">Feb</p>
+					<p class="m-caption">Mar</p>
+					<p class="m-caption">Apr</p>
+					<p class="m-caption">May</p>
+					<p class="m-caption">Jun</p>
+					<p class="m-caption">Jul</p>
+					<p class="m-caption">Aug</p>
+					<p class="m-caption">Sep</p>
+					<p class="m-caption">Oct</p>
+					<p class="m-caption">Nov</p>
+					<p class="m-caption">Dec</p>
+				</div>
+				<div class="bargraph">
+					<div class="month" id="m12"><span>15.7%</span></div>
+					<div class="month" id="m11"><span>15.5%</span></div>
+					<div class="month" id="m10"><span>17.3%</span></div>
+					<div class="month" id="m9"><span>19.0%</span></div>
+					<div class="month" id="m8"><span>20%</span></div>
+					<div class="month" id="m7"><span>19.9%</span></div>
+					<div class="month" id="m6"><span>19.0%</span></div>
+					<div class="month" id="m5"><span>19.4%</span></div>
+					<div class="month" id="m4"><span>18.1%</span></div>
+					<div class="month" id="m3"><span>18.3%</span></div>
+					<div class="month" id="m2"><span>16.1%</span></div>
+					<div class="month" id="m1"><span>18.2%</span></div>
+				</div>
 		
 			</div>
 			<div class="sec">
