--- a/index.html
+++ b/index.html
@@ -303,7 +303,7 @@
 					<p class="m-caption">Dec</p>
 				</div>
 				<div class="bargraph">
-					<div class="month" id="m12"><span>15.7%</span></div>
+					<!--<div class="month" id="m12"><span>15.7%</span></div>
 					<div class="month" id="m11"><span>15.5%</span></div>
 					<div class="month" id="m10"><span>17.3%</span></div>
 					<div class="month" id="m9"><span>19.0%</span></div>
@@ -315,6 +315,19 @@
 					<div class="month" id="m3"><span>18.3%</span></div>
 					<div class="month" id="m2"><span>16.1%</span></div>
 					<div class="month" id="m1"><span>18.2%</span></div>
+					-->
+					<div class="month" id="m12"><span></span></div>
+					<div class="month" id="m11"><span></span></div>
+					<div class="month" id="m10"><span></span></div>
+					<div class="month" id="m9"><span></span></div>
+					<div class="month" id="m8"><span></span></div>
+					<div class="month" id="m7"><span></span></div>
+					<div class="month" id="m6"><span></span></div>
+					<div class="month" id="m5"><span></span></div>
+					<div class="month" id="m4"><span></span></div>
+					<div class="month" id="m3"><span></span></div>
+					<div class="month" id="m2"><span></span></div>
+					<div class="month" id="m1"><span></span></div>
 				</div>
 		
 			</div>
